--- a/Bookstore413/Bookstore413.csproj
+++ b/Bookstore413/Bookstore413.csproj
@@ -22,5 +22,7 @@
     <Folder Include="Components\" />
     <Folder Include="Views\Shared\Components\" />
     <Folder Include="Views\Shared\Components\NavigationMenu\" />
+    <Folder Include="Pages\" />
+    <Folder Include="Pages\Shared\" />
   </ItemGroup>
 </Project>
